traffic-routes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo-kcd-2025
  labels:
    istio-injection: enabled
